--- a/sko-sample/eventstream/es-demo-setup-job-sa-role.yaml
+++ b/sko-sample/eventstream/es-demo-setup-job-sa-role.yaml
@@ -7,6 +7,9 @@ rules:
 - apiGroups: ["eventstreams.ibm.com"] 
   resources: ["eventstreams"]
   verbs: ["get", "watch", "list"]
+- apiGroups: ["apps"]
+  resources: ["statefulsets"]
+  verbs: ["get", "watch", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
