--- a/sko-sample/eventstream/es-demo-setup-job-sa-role.yaml
+++ b/sko-sample/eventstream/es-demo-setup-job-sa-role.yaml
@@ -10,6 +10,9 @@ rules:
 - apiGroups: ["apps"]
   resources: ["statefulsets"]
   verbs: ["get", "watch", "list"]
+- apiGroups: ["route.openshift.io"]
+  resources: ["routes"]
+  verbs: ["get", "watch", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
